# prohoripay-v1

./: CLAUDE.md  README.md  render.yaml  vercel.json
.claude/: launch.json
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/common/: meta.py
backend/app/core/: config.py  db.py  effects.py  enums.py  models.py  seed.py
backend/app/modules/agent/: router.py  schemas.py
backend/app/modules/alerts/: config.py  detectors.py  metrics.py  router.py  schemas.py  service.py
backend/app/modules/cases/: __init__.py  config.py  models.py  router.py  schemas.py  service.py
backend/app/modules/forecast/: config.py  metrics.py  router.py  schemas.py  service.py
backend/app/modules/health/: router.py
backend/app/modules/llm/: __init__.py  client.py  config.py  fallback.py  guard.py  prompts.py  router.py  schemas.py  service.py
backend/app/modules/pools/: router.py  schemas.py
backend/app/modules/sim/: __init__.py  broadcaster.py  clock.py  config.py  generator.py  router.py  schemas.py  service.py
backend/app/modules/synth/: config.py  generator.py
backend/app/modules/transactions/: router.py  schemas.py
backend/tests/: conftest.py  test_alerts_api.py  test_anomalies.py  test_cases.py  test_detection_metrics.py  test_detectors.py  test_direction.py  test_endpoints.py  test_forecast.py  test_forecast_api.py  test_health.py  test_integrity.py  test_lead_time.py  test_llm.py  test_seasonality.py  test_sim.py
docs/: architecture.md  data-simulation.md  responsible-design.md  validation.md
(+47 files in other folders)
